build(rest): upgrade REST Assured and MockServer