@@ -16,6 +16,7 @@ import io.restassured.RestAssured;
 import org.apache.commons.io.IOUtils;
 import org.codehaus.plexus.util.FileUtils;
 import org.mockserver.client.MockServerClient;
+import org.mockserver.configuration.ConfigurationProperties;
 import org.mockserver.mock.Expectation;
 import org.mockserver.model.HttpStatusCode;
 import org.mockserver.model.MediaType;
@@ -154,6 +155,7 @@ public class TestUtil {
     }
 
     public static void prepare(MockServerClient client, String rootPath, Predicate<MediaType> filter) throws IOException {
+        ConfigurationProperties.attemptToProxyIfNoMatchingExpectation(false);
         Expectation[] expectations = prepare(rootPath, filter);
         for (Expectation expectation : expectations) {
             client.when(expectation.getHttpRequest()).respond(expectation.getHttpResponse());
@@ -197,7 +199,7 @@ public class TestUtil {
                         map.get(mimeType).add(string_to_map.get(mimeType).apply(read(file)));
                     }
 
-                    for (MediaType mimeType : map.keySet().stream().filter(filter).collect(Collectors.toList())) {
+                    for (MediaType mimeType : map.keySet().stream().filter(filter).toList()) {
                         expectations.add(new Expectation(
                                         request()
                                                 .withPath("/" + p)
